tests/ui/fail/python_power_operator.rs
#[expandable::expr]
macro_rules! square {
    ($e:expr) => { $e ** $e }
}

fn main() {}